FIX: Drag and Drop on iOS with added CSS.

--- a/styles.css
+++ b/styles.css
@@ -167,3 +167,8 @@ h2 {
     }
 }
 
+.over {
+    opacity: 0.7;               
+    transform: scale(1.1);      
+    transition: transform 0.2s, opacity 0.2s;
+}
